Fixed comments allowed tags text wrap

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -298,3 +298,7 @@ a .entry-title {
 
 .sharing div {
 }
+
+.comment.form code {
+	white-space: normal;
+}
